--- a/practices/big-practice/index.html
+++ b/practices/big-practice/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx" defer></script>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
